{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 65,
  "lineage": "6a2ab833-2125-5669-ff5a-0fbf8b4d3cd6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0b84ef79fd469168c",
            "domain": "vpc",
            "id": "eipalloc-030f2236185ea9028",
            "instance": "i-0d2bee610d3afe4d1",
            "network_interface": "eni-0575449ea2dc2ae9e",
            "private_dns": "ip-10-0-1-50.eu-west-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-35-178-35-0.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.35.0",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.webserver",
            "aws_security_group.web",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f6a0c18edb19300",
            "arn": "arn:aws:ec2:eu-west-2:435686163433:instance/i-0d2bee610d3afe4d1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2bee610d3afe4d1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "openmined_pygrid",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0575449ea2dc2ae9e"
              }
            ],
            "primary_network_interface_id": "eni-0575449ea2dc2ae9e",
            "private_dns": "ip-10-0-1-50.eu-west-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "35.178.35.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0afbb8b62000b9357",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2b373ef94616957",
            "tags": {
              "Name": "OpenMinedWebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0758eeb206ff61952"
            ]
          },
          "dependencies": [
            "aws_network_interface.webserver",
            "aws_security_group.web",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:435686163433:internet-gateway/igw-02e886ec4d4904d5a",
            "id": "igw-02e886ec4d4904d5a",
            "owner_id": "435686163433",
            "tags": {
              "Name": "main-gw"
            },
            "vpc_id": "vpc-09cfd8775d3c1459a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0d95238e4ab59a8c4",
                "device_index": 0,
                "instance": "i-0d2bee610d3afe4d1"
              }
            ],
            "id": "eni-0575449ea2dc2ae9e",
            "mac_address": "02:91:ae:35:3f:44",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0758eeb206ff61952"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2b373ef94616957"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-032ce1886bb778c4c",
            "owner_id": "435686163433",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e886ec4d4904d5a",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e886ec4d4904d5a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-route-table"
            },
            "vpc_id": "vpc-09cfd8775d3c1459a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f349cb677e79359",
            "route_table_id": "rtb-032ce1886bb778c4c",
            "subnet_id": "subnet-0e2b373ef94616957"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route-table",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:435686163433:security-group/sg-0758eeb206ff61952",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0758eeb206ff61952",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": null,
            "owner_id": "435686163433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cfd8775d3c1459a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:435686163433:subnet/subnet-0e2b373ef94616957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e2b373ef94616957",
            "map_public_ip_on_launch": false,
            "owner_id": "435686163433",
            "tags": {
              "Name": "main-subnet"
            },
            "vpc_id": "vpc-09cfd8775d3c1459a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:435686163433:vpc/vpc-09cfd8775d3c1459a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f7b686b1793f47e9",
            "default_route_table_id": "rtb-0770f68acaf0bae64",
            "default_security_group_id": "sg-0e5a724a1e1d3a363",
            "dhcp_options_id": "dopt-922909fa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09cfd8775d3c1459a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0770f68acaf0bae64",
            "owner_id": "435686163433",
            "tags": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}